[package]
name = "autocmd"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.27"
dotenvy = "0.15"
regex = "1.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading"] }
